improve yellow text contrast [lighthouse fix]

--- a/components/caniuse/caniuse.module.scss
+++ b/components/caniuse/caniuse.module.scss
@@ -108,7 +108,7 @@
   }
 
   .yellow {
-    color: #977200;
+    color: #6b5100;
   }
 
   .green {
